--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.10
+	ericksimoes/Ultrasonic@^3.0.0
+	arduino-libraries/Servo@^1.2.1
+	madhephaestus/ESP32Servo@^0.13.0
