Add wifi and mysqldb definitions; Ultrasonic sensors logic

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.7
 	adafruit/Adafruit SH110X@^2.1.8
 	olikraus/U8g2@^2.35.6
+	chuckbell/MySQL Connector Arduino@^1.2.0
