--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,8 @@ lib_deps =
 	ericksimoes/Ultrasonic@^3.0.0
 	arduino-libraries/Servo@^1.2.1
 	madhephaestus/ESP32Servo@^0.13.0
-	adafruit/Adafruit GFX Library@^1.11.7
-	adafruit/Adafruit SH110X@^2.1.8
 	olikraus/U8g2@^2.35.6
 	chuckbell/MySQL Connector Arduino@^1.2.0
+	adafruit/Adafruit SH110X@^2.1.8
+	adafruit/Adafruit GFX Library@^1.11.7
+	blynkkk/Blynk@^1.3.2
